--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
+        <activity android:name=".ShowQuestions" android:label="@string/title_activity_show_questions">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity><activity
             android:name=".GeoSalesman"
             android:label="@string/title_activity_geo_salesman" >
             <intent-filter>
@@ -29,6 +35,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
     </application>
 
 </manifest>
