--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,13 +11,22 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name=".ShowQuestions" android:label="@string/title_activity_show_questions">
+        <activity android:name=".AddNewQuestion" android:label="@string/title_activity_add_new_question">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity><activity
+            android:name=".ShowQuestions"
+            android:label="@string/title_activity_show_questions" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".GeoSalesman"
             android:label="@string/title_activity_geo_salesman" >
             <intent-filter>
