--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="10"
         android:targetSdkVersion="15" />
     <instrumentation android:label="Instrumentation Test" android:targetPackage="com.diplomadoUNAL.geosalesman.test" android:name="android.test.InstrumentationTestRunner"></instrumentation>
 
@@ -12,15 +12,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name=".AddNewQuestion" android:label="@string/title_activity_add_new_question">
+        <activity android:name=".ShowQuestions" android:label="@string/title_activity_show_questions">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity><activity
-            android:name=".ShowQuestions"
-            android:label="@string/title_activity_show_questions" >
+        </activity><activity android:name=".AddNewQuestion" android:label="@string/title_activity_add_new_question">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
