--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,19 +6,37 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="15" />
-    <instrumentation android:label="Instrumentation Test" android:targetPackage="com.diplomadoUNAL.geosalesman.test" android:name="android.test.InstrumentationTestRunner"></instrumentation>
+
+    <instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:label="Instrumentation Test"
+        android:targetPackage="com.diplomadoUNAL.geosalesman.test" >
+    </instrumentation>
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name=".ShowQuestions" android:label="@string/title_activity_show_questions">
+        <activity android:name=".SelectQuestion" 
+             android:label="@string/title_activity_select_questions" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity><activity android:name=".AddNewQuestion" android:label="@string/title_activity_add_new_question">
+        </activity>
+        <activity
+            android:name=".ShowQuestions"
+            android:label="@string/title_activity_show_questions" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".AddNewQuestion"
+            android:label="@string/title_activity_add_new_question" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,7 +61,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
     </application>
 
 </manifest>
