--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,8 +17,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name=".SelectQuestion" 
-             android:label="@string/title_activity_select_questions" >
+        <activity
+            android:name=".SelectQuestion"
+            android:label="@string/title_activity_select_questions" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -55,6 +56,24 @@
         <activity
             android:name=".Settings"
             android:label="@string/title_activity_settings" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Question"
+            android:label="@string/title_activity_question" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".CRUDObject"
+            android:label="@string/title_activity_crudobject" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
