--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
+        <activity android:name=".GeoSalesman" android:label="@string/title_activity_geo_salesman">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity><activity
             android:name=".SelectQuestion"
             android:label="@string/title_activity_select_questions" >
             <intent-filter>
@@ -44,15 +50,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".GeoSalesman"
-            android:label="@string/title_activity_geo_salesman" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        
         <activity
             android:name=".Settings"
             android:label="@string/title_activity_settings" >
