--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,13 +17,16 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name=".GeoSalesman" android:label="@string/title_activity_geo_salesman">
+        <activity
+            android:name=".GeoSalesman"
+            android:label="@string/title_activity_geo_salesman" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity><activity
+        </activity>
+        <activity
             android:name=".SelectQuestion"
             android:label="@string/title_activity_select_questions" >
             <intent-filter>
@@ -50,7 +53,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name=".Settings"
             android:label="@string/title_activity_settings" >
@@ -72,6 +74,15 @@
         <activity
             android:name=".CRUDObject"
             android:label="@string/title_activity_crudobject" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".AddNewClient"
+            android:label="@string/title_activity_add_new_client" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
