--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/GeoSalesmanTheme" >
         <activity
             android:name=".GeoSalesman"
             android:label="@string/title_activity_geo_salesman" >
@@ -83,6 +83,15 @@
         <activity
             android:name=".AddNewClient"
             android:label="@string/title_activity_add_new_client" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".AddNewReportTemplate"
+            android:label="@string/title_activity_add_new_report_template" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
