fast and unreviewed commit - time is short now!

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="11"
         android:targetSdkVersion="15" />
 
     <instrumentation
@@ -92,6 +92,24 @@
         <activity
             android:name=".AddNewReportTemplate"
             android:label="@string/title_activity_add_new_report_template" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".AddNewReport"
+            android:label="@string/title_activity_add_new_report" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".AnswerQuestions"
+            android:label="@string/title_activity_answer_questions" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
