another fast commit

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,12 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="10"
         android:targetSdkVersion="15" />
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
@@ -110,6 +114,15 @@
         <activity
             android:name=".AnswerQuestions"
             android:label="@string/title_activity_answer_questions" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Location"
+            android:label="@string/title_activity_location" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
