--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,8 +19,7 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/GeoSalesmanTheme" >
+        android:label="@string/app_name" >
         <activity
             android:name=".GeoSalesman"
             android:label="@string/title_activity_geo_salesman" >
